omega_calc/obj/y.output
Nieużywane symbole terminalne w gramatyce

   ST
   LEQ
   GEQ
   NEQ
   ITERATIONS
   PARSE_EXPRESSION
   PARSE_FORMULA
   PARSE_RELATION
   p2
   p3
   p4
   p5
   p6
   p7


Stan 252 konflikty: 2 redukcja/redukcja


Gramatyka

    0 $accept: start $end

    1 $@1: %empty

    2 start: $@1 inputSequence

    3 inputSequence: inputItem

    4 $@2: %empty

    5 inputSequence: inputSequence $@2 inputItem

    6 inputItem: error ';'
    7          | SYMBOLIC globVarList ';'
    8          | VAR IS_ASSIGNED relation ';'
    9          | relation ';'
   10          | TIME relation ';'
   11          | TIMECLOSURE relation ';'
   12          | relation SUBSET relation ';'
   13          | CODEGEN effort relPairList context ';'
   14          | TCODEGEN effort statementInfoResult context ';'
   15          | SPMD blockAndProcsAndEffort relTripList ';'
   16          | reachable ';'

   17 relTripList: relTripList ',' relation ':' relation ':' relation
   18            | relation ':' relation ':' relation

   19 blockAndProcsAndEffort: %empty
   20                       | INT
   21                       | INT INT
   22                       | INT INT INT

   23 effort: %empty
   24       | INT
   25       | '-' INT

   26 context: %empty
   27        | GIVEN relation

   28 relPairList: relPairList ',' relation ':' relation
   29            | relPairList ',' relation
   30            | relation ':' relation
   31            | relation

   32 statementInfoResult: statementInfoList
   33                    | TRANS_IS relation statementInfoResult
   34                    | SET_MMAP INT partialwrites statementInfoResult
   35                    | UNROLL_IS INT INT INT statementInfoResult
   36                    | PEEL_IS INT INT relation statementInfoResult
   37                    | PEEL_IS INT INT relation ',' relation statementInfoResult

   38 statementInfoList: statementInfo
   39                  | statementInfoList ',' statementInfo

   40 statementInfo: '[' STRING ',' relation ',' partialwrites ',' reads ']'
   41              | '[' STRING ',' relation ',' partialwrites ']'

   42 partialwrites: partialwrites ',' partialwrite
   43              | partialwrite

   44 partialwrite: STRING '[' relation ']' ',' relation
   45             | STRING ',' relation

   46 reads: reads ',' oneread
   47      | oneread

   48 oneread: '[' partials ']'

   49 partials: partials ',' partial
   50         | partial

   51 partial: INT ',' relation

   52 globVarList: globVarList ',' globVar
   53            | globVar

   54 globVar: VAR '(' INT ')'
   55        | VAR

   56 $@3: %empty

   57 relation: OPEN_BRACE $@3 builtRelation CLOSE_BRACE
   58         | VAR
   59         | '(' relation ')'
   60         | relation '+'
   61         | relation '*'
   62         | relation '+' WITHIN relation
   63         | MINIMIZE_RANGE relation
   64         | MAXIMIZE_RANGE relation
   65         | MINIMIZE_DOMAIN relation
   66         | MAXIMIZE_DOMAIN relation
   67         | MAXIMIZE relation
   68         | MINIMIZE relation
   69         | FARKAS relation
   70         | DECOUPLED_FARKAS relation
   71         | relation '@'
   72         | PROJECT_AWAY_SYMBOLS relation
   73         | PROJECT_ON_SYMBOLS relation
   74         | DIFFERENCE relation
   75         | DIFFERENCE_TO_RELATION relation
   76         | OMEGA_DOMAIN relation
   77         | VENN relation
   78         | VENN relation GIVEN relation
   79         | CONVEX_HULL relation
   80         | POSITIVE_COMBINATION relation
   81         | CONVEX_COMBINATION relation
   82         | PAIRWISE_CHECK relation
   83         | CONVEX_CHECK relation
   84         | AFFINE_HULL relation
   85         | CONIC_HULL relation
   86         | LINEAR_HULL relation
   87         | HULL relation
   88         | HULL relation GIVEN relation
   89         | APPROX relation
   90         | RANGE relation
   91         | INVERSE relation
   92         | COMPLEMENT relation
   93         | GIST relation GIVEN relation
   94         | relation '(' relation ')'
   95         | relation COMPOSE relation
   96         | relation CARRIED_BY INT
   97         | relation JOIN relation
   98         | relation RESTRICT_RANGE relation
   99         | relation RESTRICT_DOMAIN relation
  100         | relation INTERSECTION relation
  101         | relation '-' relation
  102         | relation UNION relation
  103         | relation '*' relation
  104         | SUPERSETOF relation
  105         | SUBSETOF relation
  106         | MAKE_UPPER_BOUND relation
  107         | MAKE_LOWER_BOUND relation
  108         | SAMPLE relation
  109         | SYM_SAMPLE relation
  110         | reachable_of
  111         | ASSERT_UNSAT relation

  112 $@4: %empty

  113 $@5: %empty

  114 builtRelation: tupleDeclaration GOES_TO $@4 tupleDeclaration $@5 optionalFormula
  115              | tupleDeclaration optionalFormula
  116              | formula

  117 optionalFormula: formula_sep formula
  118                | %empty

  119 formula_sep: ':'
  120            | VERTICAL_BAR
  121            | SUCH_THAT

  122 $@6: %empty

  123 tupleDeclaration: $@6 '[' optionalTupleVarList ']'

  124 optionalTupleVarList: tupleVar
  125                     | optionalTupleVarList ',' tupleVar
  126                     | %empty

  127 tupleVar: VAR
  128         | '*'
  129         | exp
  130         | exp ':' exp
  131         | exp ':' exp ':' INT

  132 varList: varList ',' VAR
  133        | VAR

  134 varDecl: varList

  135 varDeclOptBrackets: varDecl
  136                   | '[' varDecl ']'

  137 formula: formula AND formula
  138        | formula OR formula
  139        | constraintChain
  140        | '(' formula ')'
  141        | NOT formula
  142        | start_exists varDeclOptBrackets exists_sep formula end_quant
  143        | start_forall varDeclOptBrackets forall_sep formula end_quant

  144 start_exists: '(' EXISTS
  145             | EXISTS '('

  146 exists_sep: ':'
  147           | VERTICAL_BAR
  148           | SUCH_THAT

  149 start_forall: '(' FORALL
  150             | FORALL '('

  151 forall_sep: ':'

  152 end_quant: ')'

  153 expList: exp ',' expList
  154        | exp

  155 constraintChain: expList REL_OP expList
  156                | expList REL_OP constraintChain

  157 simpleExp: VAR

  158 $@7: %empty

  159 simpleExp: VAR '(' $@7 argumentList ')'
  160          | '(' exp ')'

  161 argumentList: argumentList ',' VAR
  162             | VAR

  163 exp: INT
  164    | INT simpleExp
  165    | simpleExp
  166    | '-' exp
  167    | exp '+' exp
  168    | exp '-' exp
  169    | exp '*' exp

  170 reachable: REACHABLE_FROM nodeNameList nodeSpecificationList

  171 reachable_of: REACHABLE_OF VAR IN nodeNameList nodeSpecificationList

  172 nodeNameList: '(' realNodeNameList ')'

  173 realNodeNameList: realNodeNameList ',' VAR
  174                 | VAR

  175 nodeSpecificationList: OPEN_BRACE realNodeSpecificationList CLOSE_BRACE

  176 realNodeSpecificationList: realNodeSpecificationList ',' VAR ':' relation
  177                          | realNodeSpecificationList ',' VAR GOES_TO VAR ':' relation
  178                          | VAR GOES_TO VAR ':' relation
  179                          | VAR ':' relation


Symbole terminalne i reguły, w których występują

$end (0) 0
'(' (40) 54 59 94 140 144 145 149 150 159 160 172
')' (41) 54 59 94 140 152 159 160 172
'*' (42) 61 103 128 169
'+' (43) 60 62 167
',' (44) 17 28 29 37 39 40 41 42 44 45 46 49 51 52 125 132 153 161
    173 176 177
'-' (45) 25 101 166 168
':' (58) 17 18 28 30 119 130 131 146 151 176 177 178 179
';' (59) 6 7 8 9 10 11 12 13 14 15 16
'@' (64) 71
'[' (91) 40 41 44 48 123 136
']' (93) 40 41 44 48 123 136
error (256) 6
VAR (258) 8 54 55 58 127 132 133 157 159 161 162 171 173 174 176 177
    178 179
INT (259) 20 21 22 24 25 34 35 36 37 51 54 96 131 163 164
STRING (260) 40 41 44 45
OPEN_BRACE (261) 57 175
CLOSE_BRACE (262) 57 175
SYMBOLIC (263) 7
OR (264) 138
AND (265) 137
NOT (266) 141
ST (267)
APPROX (268) 89
IS_ASSIGNED (269) 8
FORALL (270) 149 150
EXISTS (271) 144 145
OMEGA_DOMAIN (272) 76
RANGE (273) 90
DIFFERENCE (274) 74
DIFFERENCE_TO_RELATION (275) 75
GIST (276) 93
GIVEN (277) 27 78 88 93
HULL (278) 87 88
WITHIN (279) 62
MAXIMIZE (280) 67
MINIMIZE (281) 68
AFFINE_HULL (282) 84
VENN (283) 77 78
CONVEX_COMBINATION (284) 81
POSITIVE_COMBINATION (285) 80
CONVEX_HULL (286) 79
CONIC_HULL (287) 85
LINEAR_HULL (288) 86
PAIRWISE_CHECK (289) 82
CONVEX_CHECK (290) 83
MAXIMIZE_RANGE (291) 64
MINIMIZE_RANGE (292) 63
MAXIMIZE_DOMAIN (293) 66
MINIMIZE_DOMAIN (294) 65
LEQ (295)
GEQ (296)
NEQ (297)
GOES_TO (298) 114 177 178
COMPOSE (299) 95
JOIN (300) 97
INVERSE (301) 91
COMPLEMENT (302) 92
IN (303) 171
CARRIED_BY (304) 96
TIME (305) 10
TIMECLOSURE (306) 11
UNION (307) 102
INTERSECTION (308) 100
VERTICAL_BAR (309) 120 147
SUCH_THAT (310) 121 148
SUBSET (311) 12
ITERATIONS (312)
SPMD (313) 15
CODEGEN (314) 13
DECOUPLED_FARKAS (315) 70
FARKAS (316) 69
TCODEGEN (317) 14
TRANS_IS (318) 33
SET_MMAP (319) 34
UNROLL_IS (320) 35
PEEL_IS (321) 36 37
MAKE_UPPER_BOUND (322) 106
MAKE_LOWER_BOUND (323) 107
REL_OP (324) 155 156
RESTRICT_DOMAIN (325) 99
RESTRICT_RANGE (326) 98
SUPERSETOF (327) 104
SUBSETOF (328) 105
SAMPLE (329) 108
SYM_SAMPLE (330) 109
PROJECT_AWAY_SYMBOLS (331) 72
PROJECT_ON_SYMBOLS (332) 73
REACHABLE_FROM (333) 170
REACHABLE_OF (334) 171
ASSERT_UNSAT (335) 111
PARSE_EXPRESSION (336)
PARSE_FORMULA (337)
PARSE_RELATION (338)
p1 (339)
p2 (340)
p3 (341)
p4 (342)
p5 (343)
p6 (344)
p7 (345)
p8 (346)
p9 (347)
p10 (348)


Symbole nieterminalne i reguły, w których występują

$accept (105)
    po lewej: 0
start (106)
    po lewej: 2, po prawej: 0
$@1 (107)
    po lewej: 1, po prawej: 2
inputSequence (108)
    po lewej: 3 5, po prawej: 2 5
$@2 (109)
    po lewej: 4, po prawej: 5
inputItem (110)
    po lewej: 6 7 8 9 10 11 12 13 14 15 16, po prawej: 3 5
relTripList (111)
    po lewej: 17 18, po prawej: 15 17
blockAndProcsAndEffort (112)
    po lewej: 19 20 21 22, po prawej: 15
effort (113)
    po lewej: 23 24 25, po prawej: 13 14
context (114)
    po lewej: 26 27, po prawej: 13 14
relPairList (115)
    po lewej: 28 29 30 31, po prawej: 13 28 29
statementInfoResult (116)
    po lewej: 32 33 34 35 36 37, po prawej: 14 33 34 35 36 37
statementInfoList (117)
    po lewej: 38 39, po prawej: 32 39
statementInfo (118)
    po lewej: 40 41, po prawej: 38 39
partialwrites (119)
    po lewej: 42 43, po prawej: 34 40 41 42
partialwrite (120)
    po lewej: 44 45, po prawej: 42 43
reads (121)
    po lewej: 46 47, po prawej: 40 46
oneread (122)
    po lewej: 48, po prawej: 46 47
partials (123)
    po lewej: 49 50, po prawej: 48 49
partial (124)
    po lewej: 51, po prawej: 49 50
globVarList (125)
    po lewej: 52 53, po prawej: 7 52
globVar (126)
    po lewej: 54 55, po prawej: 52 53
relation (127)
    po lewej: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111, po prawej:
    8 9 10 11 12 17 18 27 28 29 30 31 33 36 37 40 41 44 45 51 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 111 176 177 178 179
$@3 (128)
    po lewej: 56, po prawej: 57
builtRelation (129)
    po lewej: 114 115 116, po prawej: 57
$@4 (130)
    po lewej: 112, po prawej: 114
$@5 (131)
    po lewej: 113, po prawej: 114
optionalFormula (132)
    po lewej: 117 118, po prawej: 114 115
formula_sep (133)
    po lewej: 119 120 121, po prawej: 117
tupleDeclaration (134)
    po lewej: 123, po prawej: 114 115
$@6 (135)
    po lewej: 122, po prawej: 123
optionalTupleVarList (136)
    po lewej: 124 125 126, po prawej: 123 125
tupleVar (137)
    po lewej: 127 128 129 130 131, po prawej: 124 125
varList (138)
    po lewej: 132 133, po prawej: 132 134
varDecl (139)
    po lewej: 134, po prawej: 135 136
varDeclOptBrackets (140)
    po lewej: 135 136, po prawej: 142 143
formula (141)
    po lewej: 137 138 139 140 141 142 143, po prawej: 116 117 137 138
    140 141 142 143
start_exists (142)
    po lewej: 144 145, po prawej: 142
exists_sep (143)
    po lewej: 146 147 148, po prawej: 142
start_forall (144)
    po lewej: 149 150, po prawej: 143
forall_sep (145)
    po lewej: 151, po prawej: 143
end_quant (146)
    po lewej: 152, po prawej: 142 143
expList (147)
    po lewej: 153 154, po prawej: 153 155 156
constraintChain (148)
    po lewej: 155 156, po prawej: 139 156
simpleExp (149)
    po lewej: 157 159 160, po prawej: 164 165
$@7 (150)
    po lewej: 158, po prawej: 159
argumentList (151)
    po lewej: 161 162, po prawej: 159 161
exp (152)
    po lewej: 163 164 165 166 167 168 169, po prawej: 129 130 131 153
    154 160 166 167 168 169
reachable (153)
    po lewej: 170, po prawej: 16
reachable_of (154)
    po lewej: 171, po prawej: 110
nodeNameList (155)
    po lewej: 172, po prawej: 170 171
realNodeNameList (156)
    po lewej: 173 174, po prawej: 172 173
nodeSpecificationList (157)
    po lewej: 175, po prawej: 170 171
realNodeSpecificationList (158)
    po lewej: 176 177 178 179, po prawej: 175 176 177


Stan 0

    0 $accept: . start $end

    $domyślnie  redukcja przy użyciu reguły 1 ($@1)

    start  przejście do stanu 1
    $@1    przejście do stanu 2


Stan 1

    0 $accept: start . $end

    $end  przesunięcie, i przejście do stanu 3


Stan 2

    2 start: $@1 . inputSequence

    error                   przesunięcie, i przejście do stanu 4
    VAR                     przesunięcie, i przejście do stanu 5
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    SYMBOLIC                przesunięcie, i przejście do stanu 7
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    TIME                    przesunięcie, i przejście do stanu 32
    TIMECLOSURE             przesunięcie, i przejście do stanu 33
    SPMD                    przesunięcie, i przejście do stanu 34
    CODEGEN                 przesunięcie, i przejście do stanu 35
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    TCODEGEN                przesunięcie, i przejście do stanu 38
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_FROM          przesunięcie, i przejście do stanu 47
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    inputSequence  przejście do stanu 51
    inputItem      przejście do stanu 52
    relation       przejście do stanu 53
    reachable      przejście do stanu 54
    reachable_of   przejście do stanu 55


Stan 3

    0 $accept: start $end .

    $domyślnie  akceptowanie


Stan 4

    6 inputItem: error . ';'

    ';'  przesunięcie, i przejście do stanu 56


Stan 5

    8 inputItem: VAR . IS_ASSIGNED relation ';'
   58 relation: VAR .

    IS_ASSIGNED  przesunięcie, i przejście do stanu 57

    $domyślnie  redukcja przy użyciu reguły 58 (relation)


Stan 6

   57 relation: OPEN_BRACE . $@3 builtRelation CLOSE_BRACE

    $domyślnie  redukcja przy użyciu reguły 56 ($@3)

    $@3  przejście do stanu 58


Stan 7

    7 inputItem: SYMBOLIC . globVarList ';'

    VAR  przesunięcie, i przejście do stanu 59

    globVarList  przejście do stanu 60
    globVar      przejście do stanu 61


Stan 8

   89 relation: APPROX . relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 63
    reachable_of  przejście do stanu 55


Stan 9

   76 relation: OMEGA_DOMAIN . relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 64
    reachable_of  przejście do stanu 55


Stan 10

   90 relation: RANGE . relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 65
    reachable_of  przejście do stanu 55


Stan 11

   74 relation: DIFFERENCE . relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 66
    reachable_of  przejście do stanu 55


Stan 12

   75 relation: DIFFERENCE_TO_RELATION . relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 67
    reachable_of  przejście do stanu 55


Stan 13

   93 relation: GIST . relation GIVEN relation
